[package]
name = "wasm-tokio"
version = "0.1.0"
authors = ["th4s"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1", features = ["no-bundler"] }
tlsn-mpc-aio = { git = "https://github.com/tlsnotary/tlsn", branch = "async-backend-general" }
tlsn-mpc-core = { git = "https://github.com/tlsnotary/tlsn", branch = "async-backend-general" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn", branch = "async-backend-general" }
tokio = { version = "1.0", default-features = false, features = ["sync", "rt", "io-util", "macros"] }
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
